--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "discordbotthird",
+  "main": "src/index.ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,15 @@
   },
   "homepage": "https://github.com/wiscombetom/ThirdyBot#readme",
   "dependencies": {
-    "@sapphire/framework": "^2.5.0",
-    "discord.js": "^13.8.0"
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
+    "discord-api-types": "^0.33.5",
+    "discord.js": "^13.8.0",
+    "mongoose": "^6.3.6"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.42",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
